2004-01-15  Kingpin  <mthurn@verizon.net>

	* lib/I18N/Charset.pm (enco_charset_name): encoding names were not initialized sometimes

2003-03-28  Kingpin  <mthurn@megapipe.net>

	* t/enco.t: new file

	* lib/I18N/Charset.pm (enco_charset_name): new methods for Encode encoding names

2002-10-11  Kingpin  <mthurn@copper.dulles.tasc.com>

	* t/libi.t: use App::Info::Lib::Iconv instead of File::Which

	* lib/I18N/Charset.pm: check iconv version before running it
	(libi_charset_name): load iconv tables not at startup, but only when needed

2002-10-10  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm: make sure iconv exists before executing it

	* t/libi.t: new test file

	* lib/I18N/Charset.pm (libi_charset_name): added support for iconv names

2002-10-07  Kingpin  <mthurn@copper.dulles.tasc.com>

	* t/utf8.t: typo, and require Unicode::MapUTF8 version 1.09

2002-10-02  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm (_init_data): new charset list from IANA

	* t/iana.t: two new tests for new data

2002-09-05  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm: new function mime_charset_name()

2002-08-09  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm (_init_data): use IO::String instead of __DATA__ mechanism

2002-06-17  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm: new charset list from IANA

2002-05-29  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm: new charset list from IANA

2002-05-01  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm: added support for Unicode::MapUTF8
	* updated several of the tests

2002-04-15  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm: new IANA charset list

2002-02-07  Kingpin  <mthurn@copper.dulles.tasc.com>

	* lib/I18N/Charset.pm (short_to_mib): short-circuit on positive answer
	(body): BUGFIX for processing Unicode::Map's REGISTRY

2002-02-05  Kingpin  <mthurn@copper.dulles.tasc.com>
